Set basic page layout, navbar and cards

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,16 +4,69 @@
     <meta charset="UTF-8">
     <title>Daniel's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="content">
-      <h1>Daniel's Portfolio</h1>
-      <p>I'm a CS strudent in Tec de Monterrey and I live in Monterrey, Mexico.</p>
-      <img src="images/cuky1.jpg"/>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand mb-0 h1" href="#">Daniel's Portfolio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Hobbies</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My dog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trips</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="description center-col">
+            <p>Here goes my description.</p>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 center-col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/hobbies1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Hobbies</h5>
+                        <p class="card-text">My hobbies include...</p>
+                        <a href="#" class="btn btn-primary">Go nowhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 center-col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/cuky1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">My dog</h5>
+                        <p class="card-text">This is Cuky.</p>
+                        <a href="#" class="btn btn-primary">Go nowhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 center-col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/trips1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Favorite Trips</h5>
+                        <p class="card-text">Some of my favorite trips are...</p>
+                        <a href="#" class="btn btn-primary">Go nowhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
   </body>
 </html>
