Add routes for all pages

--- a/portfolio/src/main/webapp/mydog.html
+++ b/portfolio/src/main/webapp/mydog.html
@@ -33,39 +33,7 @@
             </div>
         </nav>
         <div class="description center-col">
-            <p>Here goes my description.</p>
-        </div>
-        <div class="row">
-            <div class="col-sm-4 center-col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/hobbies1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Hobbies</h5>
-                        <p class="card-text">My hobbies include...</p>
-                        <a href="hobbies.html" class="btn btn-primary">More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 center-col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/cuky1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">My dog</h5>
-                        <p class="card-text">This is Cuky.</p>
-                        <a href="mydog.html" class="btn btn-primary">Go nowhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 center-col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/trips1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Favorite Trips</h5>
-                        <p class="card-text">Some of my favorite trips are...</p>
-                        <a href="trips.html" class="btn btn-primary">Go nowhere</a>
-                    </div>
-                </div>
-            </div>
+            <p>Here goes my description of my dog.</p>
         </div>
     </div>
   </body>
