Add description, project cards and links

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,8 +32,92 @@
                 </ul>
             </div>
         </nav>
-        <div class="description center-col">
-            <p>Here goes my description.</p>
+        <div class="center-col">
+            <h3>Hi I'm Daniel Trevino and this is my Portfolio</h3>
+            <div class="description">
+                <p>
+                    I'm a CS student from ITESM and I live in Monterrey, Mexico. I started 
+                    getting interested in CS in middle school and since then 
+                    I just have been learning. I've worked on a couple of personal projects, 
+                    like:
+                </p>
+            </div>
+        </div>
+        <!-- Add real images -->
+        <div class="row">
+            <div class="col-sm-6 center-col">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <div class="card bg-dark text-white">
+                                <img src="images/cuky1.jpg" class="card-img" alt="Project 1">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">AdminMe</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flip-card-back">
+                            <div class="margins">
+                                <p>
+                                    Web app aimed at small buisnesses to administrate themselves,
+                                    upload documents, create folders, create tables. Developed with
+                                    React, using Redux for the store and Firebase for the database
+                                    and storage.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 center-col">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <div class="card bg-dark text-white">
+                                <img src="images/hobbies1.jpg" class="card-img" alt="Project 1">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">VideoChat</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flip-card-back">
+                            <div class="margins">
+                                <p>
+                                   Video chat in a web page, you can create a code to create a 
+                                   meeting of multiple people. Developed with React, using WebRTC
+                                   and Firebase for the database.  
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="center-col">
+            <div class="description">
+                <p>
+                    I worked for about 8 months in a company named BluePeople, I 
+                    was a software developer, most of the projects I worked on were 
+                    web apps. I'm currently a STEP intern for Google (until August 28).
+                </p>
+            </div>
+        </div>
+        <div class="center-col">
+            <div class="row bar">
+                <div class="col-sm-6 center-col">
+                    <a href="https://github.com/danieltre23">Github</a>
+                </div>
+                <div class="col-sm-6 center-col">
+                    <a href="https://www.linkedin.com/in/daniel-trevinoq">Linkedin</a>
+                </div>
+            </div>
+        </div>
+        <div class="center-col">
+            <div class="description">
+                <p>
+                    Here you can find some more about me:
+                </p>
+            </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
