Add proyect-id and fix mac backface-visibility bug

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -49,7 +49,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <div class="card bg-dark text-white">
+                            <div class="card bg-dark text-white hideback">
                                 <img src="images/cuky1.jpg" class="card-img" alt="Project 1">
                                 <div class="card-img-overlay">
                                     <h5 class="card-title">AdminMe</h5>
@@ -73,7 +73,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <div class="card bg-dark text-white">
+                            <div class="card bg-dark text-white hideback">
                                 <img src="images/hobbies1.jpg" class="card-img" alt="Project 1">
                                 <div class="card-img-overlay">
                                     <h5 class="card-title">VideoChat</h5>
