Add trips images and create carousels for each one

--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="description center-col">
+        <div class="w-60 center-col">
             <p>Here goes my description of my hobbies.</p>
         </div>
     </div>
