--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,7 +34,7 @@
         </nav>
         <div class="center-col">
             <h3>Hi I'm Daniel Trevino and this is my Portfolio</h3>
-            <div class="description">
+            <div class="w-60">
                 <p>
                     I'm a CS student from ITESM and I live in Monterrey, Mexico. I started 
                     getting interested in CS in middle school and since then 
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="center-col">
-            <div class="description">
+            <div class="w-60">
                 <p>
                     I worked for about 8 months in a company named BluePeople, I 
                     was a software developer, most of the projects I worked on were 
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="center-col">
-            <div class="description">
+            <div class="w-60">
                 <p>
                     Here you can find some more about me:
                 </p>
