--- a/portfolio/src/main/webapp/trips.html
+++ b/portfolio/src/main/webapp/trips.html
@@ -32,9 +32,173 @@
                 </ul>
             </div>
         </nav>
-        <div class="description center-col">
-            <p>Here goes my description of my trips.</p>
+        
+        <div class="center-col">
+            <h3>Xilitla</h3>
+            <div class="w-60">
+                <p>
+                    Some friends and I went to this little town in Mexico called Xilitla
+                    I didn't take a lot of pictures, but it was really amazing, the nature,
+                    waterfalls, some of the old arquitecture, Edward James' surrelaist garden.
+                    It was all amazing.
+                </p>
+            </div>
         </div>
+        <div id="carouselExampleCaptions1" class="carousel slide center-col slideBack" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions1" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions1" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions1" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions1" data-slide-to="3"></li>
+                <li data-target="#carouselExampleCaptions1" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/trips1.jpg" class="d-block" style="width: 30%;" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips2.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips3.jpg" class="d-block" style="width: 30%;" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips4.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips5.jpg" class="d-block w-60" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions1" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions1" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <div class="center-col">
+            <h3>Los Angeles </h3>
+            <div class="w-60">
+                <p>My family and I went to visit my brother to LA, since he was an intern for 
+                    Google there. We went to the beach a lot, to the Google offices, to Six Flags,
+                    Disney. But I think the highlight was when we went to San Diego to sky dive.
+                </p>
+            </div>
+        </div>
+        <div id="carouselExampleCaptions2" class="carousel slide center-col slideBack" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions2" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions2" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions2" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions2" data-slide-to="3"></li>
+                <li data-target="#carouselExampleCaptions2" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/trips_la1.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_la2.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_la3.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_la4.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_la5.png" class="d-block w-60" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions2" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions2" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <div class="center-col">
+            <h3>New York ...</h3>
+            <div class="w-60">
+                <p>
+                    For the christmas of 2017 all of my family for my father's side 
+                    got together in New York. We had the oportunity to see the best
+                    team in the NFL, the New York Giants vs the Eagles, it was a great 
+                    game even though we lost. This was a great trip, we explored New York
+                    went on a road trip to Washington, went skiing/snowboarding (I prefer 
+                    snowboard) and we also went to the Niagara Falls.
+                </p>
+            </div>
+        </div>
+        <div id="carouselExampleCaptions3" class="carousel slide center-col slideBack" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions3" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="3"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="4"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="5"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="6"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="7"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="8"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="9"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="10"></li>
+                <li data-target="#carouselExampleCaptions3" data-slide-to="11"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/trips_ny1.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny2.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny6.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny7.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny8.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny9.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny10.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny11.jpg" class="d-block" style="width: 30%;" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny12.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny3.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny4.jpg" class="d-block w-60" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/trips_ny5.jpg" class="d-block w-60" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions3" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions3" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
     </div>
   </body>
 </html>
