Add project images and change descriptions

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -43,26 +43,22 @@
                 </p>
             </div>
         </div>
-        <!-- Add real images -->
         <div class="row">
             <div class="col-sm-6 center-col">
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="card bg-dark text-white hideback">
-                                <img src="images/cuky1.jpg" class="card-img" alt="Project 1">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">AdminMe</h5>
-                                </div>
+                                <img src="images/adminme.png" class="card-img" alt="Project 1">
                             </div>
                         </div>
                         <div class="flip-card-back">
                             <div class="margins">
                                 <p>
-                                    Web app aimed at small buisnesses to administrate themselves,
-                                    upload documents, create folders, create tables. Developed with
-                                    React, using Redux for the store and Firebase for the database
-                                    and storage.
+                                    AdminMe is a web app aimed at small buisnesses to administrate 
+                                    themselves,upload documents, create folders, create tables. 
+                                    Developed with React, using Redux for the store and Firebase 
+                                    for the database and storage.
                                 </p>
                             </div>
                         </div>
@@ -74,10 +70,7 @@
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="card bg-dark text-white hideback">
-                                <img src="images/hobbies1.jpg" class="card-img" alt="Project 1">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">VideoChat</h5>
-                                </div>
+                                <img src="images/videochat.png" class="card-img" alt="Project 2">
                             </div>
                         </div>
                         <div class="flip-card-back">
@@ -125,8 +118,8 @@
                     <img src="images/hobbies1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Hobbies</h5>
-                        <p class="card-text">My hobbies include...</p>
-                        <a href="hobbies.html" class="btn btn-primary">More</a>
+                        <p class="card-text">Find out about my hobbies.</p>
+                        <a href="hobbies.html" class="btn btn-primary">Go to hobbies</a>
                     </div>
                 </div>
             </div>
@@ -135,8 +128,10 @@
                     <img src="images/cuky1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">My dog</h5>
-                        <p class="card-text">This is Cuky.</p>
-                        <a href="mydog.html" class="btn btn-primary">Go nowhere</a>
+                        <p class="card-text">
+                            This is my dog Cuky, here you can to to a photo gallery of him.
+                        </p>
+                        <a href="mydog.html" class="btn btn-primary">Go to gallery</a>
                     </div>
                 </div>
             </div>
@@ -145,8 +140,8 @@
                     <img src="images/trips1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Favorite Trips</h5>
-                        <p class="card-text">Some of my favorite trips are...</p>
-                        <a href="trips.html" class="btn btn-primary">Go nowhere</a>
+                        <p class="card-text">Here you can find some of my favorite trips.</p>
+                        <a href="trips.html" class="btn btn-primary">Go to trips</a>
                     </div>
                 </div>
             </div>
