Add active tab and change btn color

--- a/portfolio/src/main/webapp/trips.html
+++ b/portfolio/src/main/webapp/trips.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="mydog.html">My dog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="trips.html">Trips</a>
+                        <a class="nav-link active navbar-brand" href="trips.html">Trips</a>
                     </li>
                 </ul>
             </div>
