--- a/portfolio/src/main/webapp/hobbies.html
+++ b/portfolio/src/main/webapp/hobbies.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="hobbies.html">Hobbies</a>
+                        <a class="nav-link active navbar-brand" href="hobbies.html">Hobbies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="mydog.html">My dog</a>
