--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -119,7 +119,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Hobbies</h5>
                         <p class="card-text">Find out about my hobbies.</p>
-                        <a href="hobbies.html" class="btn btn-primary">Go to hobbies</a>
+                        <a href="hobbies.html" class="btn btn-dark">Go to hobbies</a>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                         <p class="card-text">
                             This is my dog Cuky, here you can to to a photo gallery of him.
                         </p>
-                        <a href="mydog.html" class="btn btn-primary">Go to gallery</a>
+                        <a href="mydog.html" class="btn btn-dark">Go to gallery</a>
                     </div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Favorite Trips</h5>
                         <p class="card-text">Here you can find some of my favorite trips.</p>
-                        <a href="trips.html" class="btn btn-primary">Go to trips</a>
+                        <a href="trips.html" class="btn btn-dark">Go to trips</a>
                     </div>
                 </div>
             </div>
