--- a/portfolio/src/main/webapp/mydog.html
+++ b/portfolio/src/main/webapp/mydog.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="hobbies.html">Hobbies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mydog.html">My dog</a>
+                        <a class="nav-link active navbar-brand" href="mydog.html">My dog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="trips.html">Trips</a>
