--- a/portfolio/src/main/webapp/mydog.html
+++ b/portfolio/src/main/webapp/mydog.html
@@ -37,136 +37,136 @@
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky1.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky2.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky3.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky4.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky5.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky6.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky7.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky8.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky9.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky10.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky11.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky12.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky13.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky14.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky15.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky16.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky17.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky18.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky19.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky20.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky21.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
                     <img src="images/cuky22.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
                     <img src="images/cuky23.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
                     <img src="images/cuky24.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
