--- a/portfolio/src/main/webapp/mydog.html
+++ b/portfolio/src/main/webapp/mydog.html
@@ -37,138 +37,147 @@
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(1)">
                     <img src="images/cuky1.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(2)">
                     <img src="images/cuky2.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(3)">
                     <img src="images/cuky3.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(4)">
                     <img src="images/cuky4.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(5)">
                     <img src="images/cuky5.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(6)">
                     <img src="images/cuky6.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(7)">
                     <img src="images/cuky7.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(8)">
                     <img src="images/cuky8.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(9)">
                     <img src="images/cuky9.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(10)">
                     <img src="images/cuky10.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(11)">
                     <img src="images/cuky11.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(12)">
                     <img src="images/cuky12.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(13)">
                     <img src="images/cuky13.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(14)">
                     <img src="images/cuky14.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(15)">
                     <img src="images/cuky15.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(16)">
                     <img src="images/cuky16.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(17)">
                     <img src="images/cuky17.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(18)">
                     <img src="images/cuky18.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(19)">
                     <img src="images/cuky19.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(20)">
                     <img src="images/cuky20.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(21)">
                     <img src="images/cuky21.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardLeft">
+                <div class="card bg-dark text-white margins galleryCard galleryCardLeft" onclick="openModal(22)">
                     <img src="images/cuky22.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardCenter">
+                <div class="card bg-dark text-white margins galleryCard galleryCardCenter" onclick="openModal(23)">
                     <img src="images/cuky23.jpg" class="card-img" alt="Cuky">
                 </div>
             </div>
             <div class="col-sm-4 center-col">
-                <div class="card bg-dark text-white margins galleryCard galleryCardRight">
+                <div class="card bg-dark text-white margins galleryCard galleryCardRight" onclick="openModal(24)">
                     <img src="images/cuky24.jpg" class="card-img" alt="Cuky">
                 </div>
+            </div>
+        </div>
+          
+        <div class="modal fade" id="modalMyDog" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <button type="button" class="close closeBtn" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <img id="modalMyDogImg" src="images/cuky1.jpg" class="card-img" alt="Cuky">
             </div>
         </div>
     </div>
