--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -33,6 +33,10 @@
             </div>
         </nav>
         <div class="center-col">
+            <p id="dataContainer"></p>
+            <button onclick="fetchFunction()">Get data</button>
+        </div>
+        <div class="center-col">
             <h3>Hi I'm Daniel Trevino and this is my Portfolio</h3>
             <div class="w-60">
                 <p>
