--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -33,7 +33,9 @@
             </div>
         </nav>
         <div class="center-col">
-            <p id="dataContainer"></p>
+            <p id="dataContainer1"></p>
+            <p id="dataContainer2"></p>
+            <p id="dataContainer3"></p>
             <button onclick="fetchFunction()">Get data</button>
         </div>
         <div class="center-col">
