User input for max comments and refresh onchange

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,6 +34,8 @@
         </nav>
         <ul id="commentsList"></ul>
         <div class="center-col">
+            <label for="quantity">Maximnum number of comments:</label>
+            <input type="number" id="maxComments" min="0" max="10" value="3" onchange="fetchFunction()"/>
             <form action="/data" method="POST">
                 <p>Add comment</p>
                 <textarea name="comment"></textarea>
