Add delete all comments button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -41,6 +41,7 @@
                 <textarea name="comment"></textarea>
                 <input type="submit" />
             </form>
+            <button onclick="deleteComments()">Delete all comments</button>
         </div>
         <div class="center-col">
             <h3>Hi I'm Daniel Trevino and this is my Portfolio</h3>
