--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,17 +32,6 @@
                 </ul>
             </div>
         </nav>
-        <ul id="commentsList"></ul>
-        <div class="center-col">
-            <label for="quantity">Maximnum number of comments:</label>
-            <input type="number" id="maxComments" min="0" max="10" value="3" onchange="fetchFunction()"/>
-            <form action="/data" method="POST">
-                <p>Add comment</p>
-                <textarea name="comment"></textarea>
-                <input type="submit" />
-            </form>
-            <button onclick="deleteComments()">Delete all comments</button>
-        </div>
         <div class="center-col">
             <h3>Hi I'm Daniel Trevino and this is my Portfolio</h3>
             <div class="w-60">
@@ -159,4 +148,17 @@
         </div>
     </div>
   </body>
+  <footer>
+    <div id="commentsList"></div>
+    <div class="center-col">
+        <label for="quantity">Maximnum number of comments:</label>
+        <input type="number" id="maxComments" min="0" max="10" value="3" onchange="fetchFunction()"/>
+        <form action="/data" method="POST">
+            <p>Add comment</p>
+            <textarea name="comment"></textarea>
+            <input type="submit" />
+        </form>
+        <button onclick="deleteComments()">Delete all comments</button>
+    </div>
+  </footer>
 </html>
