Style comments and comment form

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -149,15 +149,30 @@
     </div>
   </body>
   <footer>
-    <div id="commentsList"></div>
-    <div class="center-col">
+    <div class="justifyCenter">
+        <div class="width80pc" id="commentsList"></div>
+    </div>
+    <div class="media margin10px justifyCenter">
+            <form action="/data" method="POST" class="width80pc">
+                <div class="justifyCenter">
+                    <div class="emojiPicker">
+                        <img class='margin10px' src='icons/emoji-smile.svg' width="32" height="32"/>
+                        <img class='margin10px' src='icons/emoji-neutral.svg' width="32" height="32"/>
+                        <img class='margin10px' src='icons/emoji-frown.svg' width="32" height="32"/>
+                    </div>
+                    <div class='media-body'>
+                        <input class="form-control margin10px" placeholder="Name...">
+                        <textarea name="comment" class="form-control margin10px" rows="3" placeholder="Comment..."></textarea>
+                    </div>
+                </div>
+                <div class="justifyCenter">
+                    <input type="submit" />
+                </div>
+            </form>
+        </div>
         <label for="quantity">Maximnum number of comments:</label>
         <input type="number" id="maxComments" min="0" max="10" value="3" onchange="fetchFunction()"/>
-        <form action="/data" method="POST">
-            <p>Add comment</p>
-            <textarea name="comment"></textarea>
-            <input type="submit" />
-        </form>
+            
         <button onclick="deleteComments()">Delete all comments</button>
     </div>
   </footer>
