--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -152,16 +152,26 @@
     <div class="justifyCenter">
         <div class="width80pc" id="commentsList"></div>
     </div>
-    <div class="commentNum marginRight10px">
-        <label for="maxComments" class="marginRight10px">Number of comments:</label>
-        <select class="custom-select marginRight10px" id="maxComments" onchange="fetchFunction()">
-            <option selected value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-        </select>
-    </div>
-    <div class="justifyCenter">
-        <button class="btn btn-dark" onclick="deleteComments()">Delete all</button>
+    <div id="commentDependent">
+        <div class="commentNum marginRight10px">
+            <label for="maxComments" class="marginRight10px">Number of comments:</label>
+            <select class="custom-select marginRight10px" id="maxComments" onchange="fetchFunction()">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option selected value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </div>
+        <div class="justifyCenter">
+            <button class="btn btn-dark" onclick="deleteComments()">Delete all</button>
+        </div>
     </div>
     <div class="media padding10px justifyCenter">
         <form action="/data" method="POST" class="width80pc">
