--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -149,14 +149,23 @@
     </div>
   </body>
   <footer>
+    <div class="justifyCenter" id="arrowUp">
+        <button class="btn" onClick="changeCommentPage(false)">
+            <img class='autoMargin' src='icons/arrow-up.svg' width="20" height="20"/>
+        </button>
+    </div>
     <div class="justifyCenter">
         <div class="width80pc" id="commentsList"></div>
+    </div>
+    <div class="justifyCenter" id="arrowDown">
+        <button class="btn" onClick="changeCommentPage(true)">
+            <img class='autoMargin' src='icons/arrow-down.svg' width="20" height="20"/>
+        </button>
     </div>
     <div id="commentDependent">
         <div class="commentNum marginRight10px">
             <label for="maxComments" class="marginRight10px">Number of comments:</label>
             <select class="custom-select marginRight10px" id="maxComments" onchange="fetchFunction()">
-                <option value="0">0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option selected value="3">3</option>
